RESOLVED FIXED110802
Kill another analyzer warning in javascriptcore
https://bugs.webkit.org/show_bug.cgi?id=110802
Summary Kill another analyzer warning in javascriptcore
Oliver Hunt
Reported 2013-02-25 14:26:59 PST
The LegacyProfiler::{start,stop}Profiling methods try to handle a null exec, but then ignore the possibility of null later. We just exit early on a null exec now, on the basis that we would have crashed anyway had we not.
Attachments
Patch (2.24 KB, patch)
2013-02-25 14:27 PST, Oliver Hunt
no flags
Oliver Hunt
Comment 1 2013-02-25 14:27:42 PST
WebKit Review Bot
Comment 2 2013-02-26 01:49:48 PST
Comment on attachment 190127 [details] Patch Clearing flags on attachment: 190127 Committed r144026: <http://trac.webkit.org/changeset/144026>
WebKit Review Bot
Comment 3 2013-02-26 01:49:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.