Kill another analyzer warning in javascriptcore https://bugs.webkit.org/show_bug.cgi?id=110802

Reviewed by Benjamin Poulain.

Add null checks.

* profiler/LegacyProfiler.cpp:
(JSC::LegacyProfiler::startProfiling):
(JSC::LegacyProfiler::stopProfiling):


Canonical link: https://commits.webkit.org/129129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144026 268f45cc-cd09-0410-ab3c-d52691b4dbfc